--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<div id="clerk-captcha"></div>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
